--- a/src/main/resources/static/FragmentsCSS/Fragments.css
+++ b/src/main/resources/static/FragmentsCSS/Fragments.css
@@ -319,7 +319,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
-    display: none;
+    /* display: none; */
 
     &::before {
         content: '';
@@ -328,6 +328,14 @@ body {
         min-height: 100%;
         background: rgba(0, 0, 0, 0.2);
         backdrop-filter: blur(0.5rem);
+    }
+
+    #close-form-space {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
 
     #closeForm {
@@ -345,7 +353,7 @@ body {
         width: 40rem;
         min-height: 100%;
         max-height: fit-content;
-        display: none;
+        /* display: none; */
         position: absolute;
         z-index: 30;
         left: 50%;
@@ -411,33 +419,6 @@ body {
             }
         }
     }
-
-    /* #individual-course-form {
-        background: lightcoral;
-
-        input::placeholder,
-        label {
-            color: lightcoral;
-        }
-    }
-
-    #full-stack-form {
-        background: #1092e9;
-
-        input::placeholder,
-        label {
-            color: #0078CA;
-        }
-    }
-
-    #computer-basic-form {
-        background: lightblue;
-
-        input::placeholder,
-        label {
-            color: lightblue;
-        }
-    } */
 
     &.active {
         display: block !important;
