--- a/src/main/resources/templates/Fragments/index.html
+++ b/src/main/resources/templates/Fragments/index.html
@@ -134,13 +134,14 @@
         </section>
     </main>
     <section id="forms">
+        <div id="close-form-space"></div>
         <a href="">
             <i id="closeForm" class="ri-close-large-line"></i>
         </a>
         <div id="individual-course-form" class="form-wrapper">
-            <form th:action= "@{/add_individ}" method="post" th:object="${individ}">
+            <form th:action="@{/add_individ}" method="post" th:object="${individ}">
                 <h1>- Individual Course -</h1>
-                <input type="text" placeholder="Full Name.." th:field="*{name}"/>
+                <input type="text" placeholder="Full Name.." th:field="*{name}" />
 
                 <select th:field="*{course}">
                     <option value="">Select Course..</option>
@@ -154,27 +155,27 @@
 
                 <div class="input-wrap">
                     <label>Starting Date</label>
-                    <input class="input-date" type="date" th:field="*{strating_date}"/>
+                    <input class="input-date" type="date" th:field="*{strating_date}" />
                 </div>
 
                 <div class="input-wrap">
                     <label>Ending Date</label>
-                    <input class="input-date" type="date" th:field="*{ending_date}"/>
+                    <input class="input-date" type="date" th:field="*{ending_date}" />
                 </div>
                 <div class="input-wrap">
                     <label>Date of isssue</label>
-                    <input class="input-date" type="date" th:field="*{date_of_issue}"/>
+                    <input class="input-date" type="date" th:field="*{date_of_issue}" />
                 </div>
 
                 <input class="submit" type="submit" value="Submit">
             </form>
         </div>
 
-      <div id="full-stack-form" class="form-wrapper">
-            <form th:action= "@{/add_fullStack}" method="post" th:object="${full_stack}">
+        <div id="full-stack-form" class="form-wrapper">
+            <form th:action="@{/add_fullStack}" method="post" th:object="${full_stack}">
                 <h1>- Full Stack -</h1>
 
-                <input type="text" placeholder="Full Name.." th:field="*{name}"/>
+                <input type="text" placeholder="Full Name.." th:field="*{name}" />
 
                 <select th:field="*{course}">
                     <option value="">Select Course..</option>
@@ -186,17 +187,17 @@
 
                 <div class="input-wrap">
                     <label>Starting Date</label>
-                    <input class="input-date" type="date" th:field="*{strating_date}"/>
+                    <input class="input-date" type="date" th:field="*{strating_date}" />
                 </div>
 
                 <div class="input-wrap">
                     <label>Ending Date..</label>
-                    <input class="input-date" type="date" th:field="*{ending_date}"/>
+                    <input class="input-date" type="date" th:field="*{ending_date}" />
                 </div>
 
                 <div class="input-wrap">
                     <label>Date of isssue</label>
-                    <input class="input-date" type="date" th:field="*{date_of_issue}"/>
+                    <input class="input-date" type="date" th:field="*{date_of_issue}" />
                 </div>
 
                 <input type="submit" value="Submit">
@@ -204,11 +205,11 @@
         </div>
 
         <div id="computer-basic-form" class="form-wrapper">
-            <form th:action= "@{/add_basic}" method="post" th:object="${Basic}">
+            <form th:action="@{/add_basic}" method="post" th:object="${Basic}">
                 <h1>- Computer Basic -</h1>
                 <input type="text" placeholder="Full Name.." th:field="*{name}" required />
 
-                <select  th:field="*{course}" required>
+                <select th:field="*{course}" required>
                     <option value="" class="option">Select Course..</option>
                     <option value="Basic computer">Basic computer</option>
                     <option value="Excel Basic">Excel Basic</option>
@@ -218,7 +219,7 @@
 
                 <div class="input-wrap">
                     <label>Starting Date..</label>
-                    <input class="input-date" type="date"  th:field="*{strating_date}" required />
+                    <input class="input-date" type="date" th:field="*{strating_date}" required />
                 </div>
 
                 <div class="input-wrap">
